# imalive

./: .gitignore  PRD.md  README.md  TASKS.md  index.html  package.json
.github/workflows/: release.yml
design/: README.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: assert_matrix.rs  assert_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
