[package]
name = "imalive"
version = "0.2.0"
description = "Keep your machine awake — cross-platform"
authors = ["Abdullah"]
license = "MIT"
edition = "2021"

[lib]
# The `_lib` suffix avoids a name clash with the bin on Windows.
name = "imalive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Cross-platform "keep awake": IOKit assertions (macOS),
# SetThreadExecutionState (Windows), D-Bus/systemd inhibit (Linux).
keepawake = "0.5"
